swag fix
